--- a/seed.yaml
+++ b/seed.yaml
@@ -1,5 +1,8 @@
+# Wack Freeware
 BetterTouchTool: 'http://bettertouchtool.net/BetterTouchTool.zip'
+Asepsis: 'http://downloads.binaryage.com/Asepsis-1.5.dmg'
+Enjoyable: 'https://yukkurigames.com/enjoyable/Enjoyable-1.2.zip'
+# Cross-Platform FOSS
 Clementine: 'https://github.com/clementine-player/Clementine/releases/download/1.2.2/clementine-1.2.2.dmg'
-# Enjoyable: 'https://yukkurigames.com/enjoyable/Enjoyable-1.2.zip'
-# VLC: 'http://get.videolan.org/vlc/2.1.5/macosx/vlc-2.1.5.dmg'
-# Adium: 'http://downloads.sourceforge.net/project/adium/Adium_1.5.10.dmg'
+VLC: 'http://get.videolan.org/vlc/2.1.5/macosx/vlc-2.1.5.dmg'
+Adium: 'http://downloads.sourceforge.net/project/adium/Adium_1.5.10.dmg'
