This is why we don't make things that we can't believe don't already exist. Because they do.

--- a/seed.yaml
+++ b/seed.yaml
@@ -2,7 +2,9 @@
 BetterTouchTool: 'http://bettertouchtool.net/BetterTouchTool.zip'
 Asepsis: 'http://downloads.binaryage.com/Asepsis-1.5.dmg'
 Enjoyable: 'https://yukkurigames.com/enjoyable/Enjoyable-1.2.zip'
+Flash: 'https://aihdownload.adobe.com/bin/live/AdobeFlashPlayerInstaller_17au_ltrosxd_aaa_aih.dmg'
 # Cross-Platform FOSS
 Clementine: 'https://github.com/clementine-player/Clementine/releases/download/1.2.2/clementine-1.2.2.dmg'
 VLC: 'http://get.videolan.org/vlc/2.1.5/macosx/vlc-2.1.5.dmg'
 Adium: 'http://downloads.sourceforge.net/project/adium/Adium_1.5.10.dmg'
+CodeBlocks: 'http://sourceforge.net/projects/codeblocks/files/Binaries/13.12/MacOS/CodeBlocks-13.12-mac.zip'
